--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/shockingly": "^3.12.7",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.7",
+    "gsap": "npm:@gsap/shockingly@^3.12.7",
     "lenis": "^1.1.21",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "three": "^0.174.0",
     "zustand": "^5.0.3"
   },
