--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@gsap/shockingly": "^3.12.7",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.7",
     "gsap": "npm:@gsap/shockingly@^3.12.7",
@@ -21,19 +24,33 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
+    "styled-components": "^6.1.15",
     "three": "^0.174.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.6",
+    "@storybook/addon-essentials": "^8.6.6",
+    "@storybook/addon-onboarding": "^8.6.6",
+    "@storybook/blocks": "^8.6.6",
+    "@storybook/experimental-addon-test": "^8.6.6",
+    "@storybook/experimental-nextjs-vite": "^8.6.6",
+    "@storybook/react": "^8.6.6",
+    "@storybook/test": "^8.6.6",
     "@tailwindcss/cli": "^4.0.9",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser": "^3.0.8",
+    "@vitest/coverage-v8": "^3.0.8",
     "autoprefixer": "^10.4.20",
+    "playwright": "^1.51.0",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
+    "storybook": "^8.6.6",
     "tailwindcss": "^4.0.9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.0.8"
   }
 }
