--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "strava-v3": "^2.2.1",
     "styled-components": "^6.1.15",
     "three": "^0.174.0",
     "zustand": "^5.0.3"
