--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "watch-photos": "ts-node scripts/update-photos.ts"
   },
   "dependencies": {
     "@gsap/shockingly": "^3.12.7",
@@ -39,17 +40,20 @@
     "@storybook/test": "^8.6.6",
     "@tailwindcss/cli": "^4.0.9",
     "@tailwindcss/postcss": "^4.0.9",
+    "@types/chokidar": "^1.7.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.8",
     "autoprefixer": "^10.4.20",
+    "chokidar": "^4.0.3",
     "playwright": "^1.51.0",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
     "storybook": "^8.6.6",
     "tailwindcss": "^4.0.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "vitest": "^3.0.8"
   }
