--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@types/styled-components": "^5.1.34",
+    "@upstash/redis": "^1.34.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.4.7",
     "gsap": "npm:@gsap/shockingly@^3.12.7",
@@ -25,6 +27,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.15",
     "three": "^0.174.0",
