--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.4.7",
     "gsap": "npm:@gsap/shockingly@^3.12.7",
