--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^9.0.4",
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
